[progress] aligned top-bar correctly w/r/t bottom

--- a/client/src/css/BottomHeader.css
+++ b/client/src/css/BottomHeader.css
@@ -36,7 +36,6 @@
   list-style: none;
   position: relative;
   float: right;
-  right: 40px;
 }
 
 /* Mega Menu Top Level Elements */
